--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -1270,7 +1270,7 @@
             <div class="_6tsdpm"><span class="ll4r2nl dir dir-ltr">Suggested prices are based on your listing’s location and amenities, as well as nearby prices and demand. You choose your price, and you can adjust it at any time.</span></div>
            </div>
            <footer class="_zgc1p6">
-            <div class="_lmgcah"><button type="button" class="_1lerwp6l">Done</button></div>
+            <div class="_lmgcah"><button type="button" class="btn-dark-small">Done</button></div>
            </footer>
           </div>
          </div>
