--- a/help/searching-for-stays.html
+++ b/help/searching-for-stays.html
@@ -834,7 +834,7 @@
                                           </div>
                                         </fieldset>
                                         <div class="b1efsl54 dir dir-ltr">
-                                          <button type="submit" class="_1lerwp6l">
+                                          <button type="submit" class="btn-dark-small">
                                             Submit
                                           </button>
                                         </div>
