--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -13177,7 +13177,7 @@
                                                                             class="_sbaj1v"><button data-button="close"
                                                                               data-testid="availability-calendar-save"
                                                                               type="button"
-                                                                              class="_1lerwp6l">Close</button></span>
+                                                                              class="btn-dark-small">Close</button></span>
                                                                         </div>
                                                                       </div>
                                                                     </div>
