--- a/online-experience/calendar_agenda.html
+++ b/online-experience/calendar_agenda.html
@@ -3787,7 +3787,7 @@
                                 <div class="hg6cldq dir dir-ltr">No experiences scheduled</div>
                               </div>
                               <div class="a106r80v dir dir-ltr">
-                                <div class=" dir dir-ltr"><button type="button" class="_1lerwp6l">Schedule an
+                                <div class=" dir dir-ltr"><button type="button" class="btn-dark-small">Schedule an
                                     experience</button></div>
                               </div>
                             </div>
