--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -1199,7 +1199,7 @@
             </div>
            </div>
            <footer class="_zgc1p6">
-            <div class="_lmgcah"><button type="button" class="_1lerwp6l">Done</button></div>
+            <div class="_lmgcah"><button type="button" class="btn-dark-small">Done</button></div>
            </footer>
           </div>
          </div>
