--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -4338,7 +4338,7 @@
                   </div>
                   <footer class="_zgc1p6">
                     <button type="button" class="_1e5q4qoz">Clear</button>
-                    <button type="button" class="_1lerwp6l">Save</button>
+                    <button type="button" class="btn-dark-small">Save</button>
                   </footer>
                 </div>
               </div>
