--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -11043,7 +11043,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 </div>
                                                               </div>
                                                             </div>
-                                                            <div class="_b453sy"><button type="button" class="_1e5q4qoz">
+                                                            <div class="_b453sy"><button type="button" class="btn-link-small">
                                                                 <div class="_5kaapu"><span class="_14tkmhr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                       aria-hidden="true" role="presentation" focusable="false"
                                                                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
@@ -11156,7 +11156,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                             </div>
                                                           </div>
-                                                          <div class="_b453sy"><button type="button" class="_1e5q4qoz">
+                                                          <div class="_b453sy"><button type="button" class="btn-link-small">
                                                               <div class="_5kaapu"><span class="_14tkmhr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation" focusable="false"
                                                                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
