--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -19787,7 +19787,7 @@
                                   <div>
                                     <div class="_88xxct">
                                       <div class="_1jdtwz4">
-                                        <div class="_c2acbp"><button type="button" class="_1e5q4qoz">
+                                        <div class="_c2acbp"><button type="button" class="btn-link-small">
                                             <div class="flex-items-center"><span class="_14tkmhr"><svg
                                                   viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                   aria-hidden="true" role="presentation" focusable="false"
@@ -19800,7 +19800,7 @@
                                                 </svg></span>Share</div>
                                           </button></div>
                                         <div><button aria-label="Add listing to a list"
-                                            data-testid="pdp-save-button-unsaved" type="button" class="_1e5q4qoz">
+                                            data-testid="pdp-save-button-unsaved" type="button" class="btn-link-small">
                                             <div aria-hidden="true" class="flex-items-center"><span
                                                 class="_14tkmhr"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
