--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -17696,7 +17696,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="_1ma6qt2"><button type="button" class="_1e5q4qoz">Clear dates</button></div>
+                            <div class="_1ma6qt2"><button type="button" class="btn-link-small">Clear dates</button></div>
                           </div>
                         </div>
                       </div>
