--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -13173,7 +13173,7 @@
                                                                                 </path>
                                                                               </svg></span></button></div>
                                                                         <div class="_1sl8tba"><button type="button"
-                                                                            class="_1e5q4qoz">Clear dates</button><span
+                                                                            class="btn-link-small">Clear dates</button><span
                                                                             class="_sbaj1v"><button data-button="close"
                                                                               data-testid="availability-calendar-save"
                                                                               type="button"
@@ -21405,7 +21405,7 @@
                                     <div class="_88xxct">
                                       <div class="_1jdtwz4">
                                         <div class="_c2acbp">
-                                          <button type="button" class="_1e5q4qoz" data-modal="#share-modal">
+                                          <button type="button" class="btn-link-small" data-modal="#share-modal">
                                             <div class="flex-items-center">
                                               <span class="_14tkmhr"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -21429,7 +21429,7 @@
                                         </div>
                                         <div>
                                           <button aria-label="Add listing to a list"
-                                            data-testid="pdp-save-button-unsaved" type="button" class="_1e5q4qoz">
+                                            data-testid="pdp-save-button-unsaved" type="button" class="btn-link-small">
                                             <div aria-hidden="true" class="flex-items-center">
                                               <span class="_14tkmhr"><svg viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -29200,7 +29200,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="_1ma6qt2"><button type="button" class="_1e5q4qoz">Clear dates</button></div>
+                              <div class="_1ma6qt2"><button type="button" class="btn-link-small">Clear dates</button></div>
                             </div>
                           </div>
                         </div>
