--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1182,7 +1182,7 @@
                                    </div>
                                   </div>
                                  </div>
-                                 <div class="_h7jomj group-labels hidden"><button type="button" class="_1e5q4qoz remove-group-rate">Remove group rate</button></div>
+                                 <div class="_h7jomj group-labels hidden"><button type="button" class="btn-link-small remove-group-rate">Remove group rate</button></div>
                                  <hr class="_l1tb2l hidden group-hr">
                                 <div class="_8adqoa group-banner-btn">
                                   <div style="width: 56px; height: 56px">
