--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -2394,7 +2394,7 @@
                     </div>
                   </div>
                   <footer class="_zgc1p6">
-                    <button type="button" class="_1e5q4qoz">Clear</button>
+                    <button type="button" class="btn-link-small">Clear</button>
                     <button type="button" class="btn-dark-small">Save</button>
                   </footer>
                 </div>
