--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -1958,7 +1958,7 @@
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="_15rpys7s">Exit</button>
-             <div class="_1m110ux"><button type="button" class="_148dgdpk">Keep working</button></div>
+             <div class="_1m110ux"><button type="button" class="btn-dark-block">Keep working</button></div>
             </div>
            </footer>
           </div>
