--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10960,7 +10960,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                           id="null_textArea"></textarea></div>
                     </div>
                   </label></div>
-                <footer class="_zgc1p6"><button disabled="" type="button" class="_148dgdpk">Save</button></footer>
+                <footer class="_zgc1p6"><button disabled="" type="button" class="btn-dark-block">Save</button></footer>
               </div>
             </div>
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
