--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -1091,7 +1091,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
            <footer class="_zgc1p6">
             <div class="_1gty68l">
              <button type="button" class="_15rpys7s">Exit</button>
-             <div class="_1m110ux"><button type="button" class="_148dgdpk">Keep working</button></div>
+             <div class="_1m110ux"><button type="button" class="btn-dark-block">Keep working</button></div>
             </div>
            </footer>
           </div>
