--- a/online-experience/insights.html
+++ b/online-experience/insights.html
@@ -3837,7 +3837,7 @@
                    </span>
                   </div>
                  </div>
-                 <footer class="_zgc1p6"><a target="_blank" href="/experience-hosting/listings/3745068/pricing" class="_148dgdpk">Review your price</a></footer>
+                 <footer class="_zgc1p6"><a target="_blank" href="/experience-hosting/listings/3745068/pricing" class="btn-dark-block">Review your price</a></footer>
                 </div>
                </div>
               </main>
@@ -3906,7 +3906,7 @@
                    </span>
                   </div>
                  </div>
-                 <footer class="_zgc1p6"><a target="_blank" href="/experience-hosting/listings/3745068/pricing" class="_148dgdpk">Review your price</a></footer>
+                 <footer class="_zgc1p6"><a target="_blank" href="/experience-hosting/listings/3745068/pricing" class="btn-dark-block">Review your price</a></footer>
                 </div>
                </div>
               </main>
