fix gallery modal in tablet below

--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -17567,7 +17567,7 @@
 
     <!-- gallery modal -->
 <div role="dialog" class="_1ugan3i hidden" style="z-index: 2000">
-  <div class="_1od2xb8">
+  <div class="_1od2xb8 hidden block-md">
     <div class="_rgyfiy">
       <div>
         <div data-showat="mediumAndAbove">
