fix margin bottom in gallery modal

--- a/listings-product/places.html
+++ b/listings-product/places.html
@@ -246,7 +246,7 @@
                       <div class="place__wrapper">
                         <div class="main-content__details-form-language">
                           <div class="place__container-img-container" style="margin-bottom: 0">
-                            <div class="place__container-img-wrapper hidden block-md">
+                            <div class="place__container-img-wrapper hidden block-md" style="margin-bottom: 24px">
                               <div>
                                 <div
                                   id="header-photo-0"
