fix wishlists spacing

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -289,7 +289,7 @@
                                       </span>
                                     </button>
                                     <div class="_h9dw5i">
-                                      <button aria-label="Share" data-testid="list-details-marquee__share-button" type="button" class="btn-share-md" data-modal="#share-modal"  >
+                                      <button aria-label="Share" data-testid="list-details-marquee__share-button" type="button" class="btn-save" data-modal="#share-modal"  >
                                         <span class="relative">
                                           <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                             <g fill="none">
@@ -1790,7 +1790,7 @@
                                       type="button"
                                       data-modal="#share-modal"
                                       
-                                      class="btn-share-desktop btn-save"
+                                      class="btn-save"
                                     >
                                       <span class="relative"
                                         ><svg
@@ -8837,7 +8837,7 @@
                   </div>
                 </div>
               </div>
-              <div class="_1ns0ggc">
+              <div class="_1ns0ggc hidden-scrollbar">
                 <div class="_1mbzv36">
                   <div class=" dir dir-ltr" role="group" id="flexible-dates-chips"
                     aria-labelledby="flexible-dates-chips-DLS-chipGroup-label">
