--- a/account/account-settings.html
+++ b/account/account-settings.html
@@ -220,7 +220,7 @@
                                 <div class="account-container-mb__header">
                                   <div class="account-container-mb__header-wrapper dir dir-ltr">
                                     <div class="box-border">
-                                      <div class="account-container-mb__header-profile-wrapper">
+                                      <div class="mb-4">
                                         <img
                                           class="account-container-mb__header-profile"
                                           src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_x_medium"
