--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -437,7 +437,7 @@
                                   >
                                     <div class="account-container__menu-container">
                                       <div class="become-a-host__photos-large">
-                                        <div class="account-container-mb__header-profile-wrapper" style="">
+                                        <div class="mb-4" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -579,7 +579,7 @@
                                         </div>
                                       </div>
                                       <div class="become-a-host__photos-small">
-                                        <div class="account-container-mb__header-profile-wrapper" style="">
+                                        <div class="mb-4" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -723,7 +723,7 @@
                                         </div>
                                       </div>
                                       <div class="become-a-host__photos-small">
-                                        <div class="account-container-mb__header-profile-wrapper" style="">
+                                        <div class="mb-4" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -860,7 +860,7 @@
                                         </div>
                                       </div>
                                       <div class="become-a-host__photos-small">
-                                        <div class="account-container-mb__header-profile-wrapper" style="">
+                                        <div class="mb-4" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -997,7 +997,7 @@
                                         </div>
                                       </div>
                                       <div class="become-a-host__photos-small">
-                                        <div class="account-container-mb__header-profile-wrapper" style="">
+                                        <div class="mb-4" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -1134,7 +1134,7 @@
                                         </div>
                                       </div>
                                       <div class="become-a-host__photos-small">
-                                        <div class="account-container-mb__header-profile-wrapper">
+                                        <div class="mb-4">
                                           <div
                                             class="relative"
                                             style="padding-bottom: 66.67%"
