--- a/help/help.html
+++ b/help/help.html
@@ -1703,7 +1703,7 @@
                                                                             class="_18l8tew"
                                                                           >
                                                                             <div
-                                                                              class="account-container-mb__header-profile-wrapper"
+                                                                              class="mb-4"
                                                                             >
                                                                               <div
                                                                                 class="footer__progress-active-wrapper"
@@ -1895,7 +1895,7 @@
                                                                             class="_18l8tew"
                                                                           >
                                                                             <div
-                                                                              class="account-container-mb__header-profile-wrapper"
+                                                                              class="mb-4"
                                                                             >
                                                                               <div
                                                                                 class="footer__progress-active-wrapper"
@@ -2090,7 +2090,7 @@
                                                                     class="_18l8tew"
                                                                   >
                                                                     <div
-                                                                      class="account-container-mb__header-profile-wrapper"
+                                                                      class="mb-4"
                                                                     >
                                                                       <div
                                                                         class="footer__progress-active-wrapper"
@@ -2247,7 +2247,7 @@
                                                                     class="_18l8tew"
                                                                   >
                                                                     <div
-                                                                      class="account-container-mb__header-profile-wrapper"
+                                                                      class="mb-4"
                                                                     >
                                                                       <div
                                                                         class="footer__progress-active-wrapper"
@@ -2383,7 +2383,7 @@
                                                                   class="_18l8tew"
                                                                 >
                                                                   <div
-                                                                    class="account-container-mb__header-profile-wrapper"
+                                                                    class="mb-4"
                                                                   >
                                                                     <div
                                                                       class="footer__progress-active-wrapper"
@@ -2539,7 +2539,7 @@
                                                                   class="_18l8tew"
                                                                 >
                                                                   <div
-                                                                    class="account-container-mb__header-profile-wrapper"
+                                                                    class="mb-4"
                                                                   >
                                                                     <div
                                                                       class="footer__progress-active-wrapper"
