--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -3910,7 +3910,7 @@
                                       <div class="_p2vzl7">
                                         <div>
                                           <h3 class="_e68897">Your dates are no longer available</h3>
-                                          <div class="_p03egf">
+                                          <div class="mb-4">
                                             <div>Adrian's place is no longer available for your travel dates. Try
                                               searching for another place to
                                               stay.</div>
