--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -3642,7 +3642,7 @@
                               <div class="_1ejw71e" style="height: fit-content;">
                                 <a href="https://community.withairbnb.com" class="app-theme__navbar-left-menu-list-text-wrapper">
                                   <div class="give-feedback" style="justify-content: flex-start !important;">
-                                    <div class="account-container-mb__header-profile-wrapper">
+                                    <div class="mb-4">
                                       <div class="tab__content-visibility">
                                         <span class="page-shell-mobile__container-text" style="
                                             --tl-font-size: 18px;
@@ -3687,7 +3687,7 @@
                               <div class="_1ejw71e" style="height: fit-content;">
                                 <a href="/help/hosting-experiences" class="app-theme__navbar-left-menu-list-text-wrapper">
                                   <div class="give-feedback" style="justify-content: flex-start !important;">
-                                    <div class="account-container-mb__header-profile-wrapper">
+                                    <div class="mb-4">
                                       <div class="tab__content-visibility">
                                         <span class="page-shell-mobile__container-text" style="
                                             --tl-font-size: 18px;
