--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1087,7 +1087,7 @@
                                     <div class="become-a-host__photos-container">
                                       <div class="account-container__menu-container">
                                         <div class="_153y5wk9">
-                                          <div class="account-container-mb__header-profile-wrapper">
+                                          <div class="mb-4">
                                             <div
                                               role="group"
                                               aria-label="Photo 1 of 5"
@@ -1211,7 +1211,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="account-container-mb__header-profile-wrapper">
+                                          <div class="mb-4">
                                             <div
                                               role="group"
                                               aria-label="Photo 2 of 5"
@@ -1335,7 +1335,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="account-container-mb__header-profile-wrapper">
+                                          <div class="mb-4">
                                             <div
                                               role="group"
                                               aria-label="Photo 3 of 5"
@@ -1459,7 +1459,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="account-container-mb__header-profile-wrapper">
+                                          <div class="mb-4">
                                             <div
                                               role="group"
                                               aria-label="Photo 4 of 5"
@@ -1583,7 +1583,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="account-container-mb__header-profile-wrapper">
+                                          <div class="mb-4">
                                             <div
                                               role="group"
                                               aria-label="Photo 5 of 5"
