--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1875,7 +1875,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                         >
                                           <div class="textarea-label-wrapper">
                                             <div
-                                              class="account-container-mb__header-profile-wrapper"
+                                              class="mb-4"
                                               style="
                                                 color: rgb(34, 34, 34);
                                                 font-size: 16px;
