--- a/edit/about.html
+++ b/edit/about.html
@@ -894,7 +894,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                         <label for="about_host_input">
                                           <div class="textarea-label-wrapper">
                                             <div
-                                              class="account-container-mb__header-profile-wrapper"
+                                              class="mb-4"
                                               style="
                                                 color: rgb(34, 34, 34);
                                                 font-size: 16px;
