--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3579,7 +3579,7 @@
                       <div class="_1ny5tm2">
                        <div class="_1byskwn">
                         <div class="_1oa4lmzv">
-                         <div class="_18dgbyf">
+                         <div class="mb-4">
                           <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
@@ -4331,7 +4331,7 @@
                       <div class="_1ny5tm2">
                        <div class="_1byskwn">
                         <div class="_1oa4lmzv">
-                         <div class="_18dgbyf">
+                         <div class="mb-4">
                           <div class="relative" style="padding-bottom: 133.33%;">
                            <div class="_1k2xyy0">
                             <div class="_1258d0t">
