--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6734,7 +6734,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="button" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
+                                    <div class="modal__share-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                         <path
@@ -6748,7 +6748,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 32px; width: 32px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                         <g fill="none">
@@ -6765,7 +6765,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px;">
                                         <defs>
@@ -6790,7 +6790,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px;">
                                         <path d="m32 0v32h-32v-32z" fill="#25d366"></path>
@@ -6805,7 +6805,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px;">
                                         <defs>
@@ -6832,7 +6832,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px;">
                                         <path fill="#1877F2" d="M32 0v32H0V0z"></path>
@@ -6847,7 +6847,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px;">
                                         <path fill="#1DA1F2" d="M0 0H32V32H0z"></path>
@@ -6862,7 +6862,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="button" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                         <path
@@ -6938,7 +6938,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="button" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
                                         role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                         <path
@@ -6952,7 +6952,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false"
                                         style="display: block; fill: none; height: 32px; width: 32px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                         <g fill="none">
@@ -6969,7 +6969,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
                                         <defs>
                                           <linearGradient x1="50.794%" y1="93.362%" x2="50.794%" y2="12.41%" id="imessagegradient">
@@ -6992,7 +6992,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
                                         <path d="m32 0v32h-32v-32z" fill="#25d366"></path>
                                         <path
@@ -7006,7 +7006,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
                                         <defs>
                                           <radialGradient cx="19.25%" cy="99.447%" fx="19.25%" fy="99.447%" r="108.96%"
@@ -7032,7 +7032,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
                                         <path fill="#1877F2" d="M32 0v32H0V0z"></path>
                                         <path
@@ -7046,7 +7046,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="link" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
                                         <path fill="#1DA1F2" d="M0 0H32V32H0z"></path>
                                         <path
@@ -7060,7 +7060,7 @@
                             <div class="_9zsv75f">
                               <div class="_mnf8sq"><button role="button" type="button" class="_11eqlma4">
                                   <div class="_5kaapu">
-                                    <div class="_1l9dusq"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                    <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false"
                                         style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                         <path
