modal__share-desc-img

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6727,7 +6727,7 @@
                           </h2>
                           <div class="_1ywltba"><img
                               src="https://a0.muscache.com/im/pictures/miso/Hosting-53944561/original/d024cb56-74a1-4d6e-9994-baf9404f152c.jpeg?im_w=720"
-                              alt="" class="_1x7xqyv">
+                              alt="" class="modal__share-desc-img">
                             <div class="_lo9vot">Check out my wishlist: Teas</div>
                           </div>
                           <div class="_1byskwn">
@@ -6931,7 +6931,7 @@
                           </h2>
                           <div class="_1ywltba"><img
                               src="https://a0.muscache.com/im/pictures/miso/Hosting-53944561/original/d024cb56-74a1-4d6e-9994-baf9404f152c.jpeg?im_w=720"
-                              alt="" class="_1x7xqyv">
+                              alt="" class="modal__share-desc-img">
                             <div class="_lo9vot">Contribute to my wishlist: Teas</div>
                           </div>
                           <div class="_1byskwn">
