modal__share-desc

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6725,7 +6725,7 @@
                           <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_e0px5r">Send a link to your wishlist</div>
                           </h2>
-                          <div class="_1ywltba"><img
+                          <div class="modal__share-desc"><img
                               src="https://a0.muscache.com/im/pictures/miso/Hosting-53944561/original/d024cb56-74a1-4d6e-9994-baf9404f152c.jpeg?im_w=720"
                               alt="" class="modal__share-desc-img">
                             <div class="_lo9vot">Check out my wishlist: Teas</div>
@@ -6929,7 +6929,7 @@
                           <h2 tabindex="-1" class="heading" elementtiming="LCP-target">
                             <div class="_e0px5r">Invite others to join</div>
                           </h2>
-                          <div class="_1ywltba"><img
+                          <div class="modal__share-desc"><img
                               src="https://a0.muscache.com/im/pictures/miso/Hosting-53944561/original/d024cb56-74a1-4d6e-9994-baf9404f152c.jpeg?im_w=720"
                               alt="" class="modal__share-desc-img">
                             <div class="_lo9vot">Contribute to my wishlist: Teas</div>
